// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="css-prp4qr-Filter"
      >
        <button
          className="css-190url3-Filter"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="css-ohjhgn-Filter"
          >
            <span
              className="css-12o2hfl-Filter"
            >
              <span
                className="css-1afohzx-Filter"
              >
                you can change me
                :
                <span>
                  Peach
                </span>
              </span>
            </span>
            <span
              className="css-1gnbc76-Icon"
              onClick={[Function]}
            >
              <span
                className="css-1rnhl34-Icon"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-nj7sf5-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-seh1fv-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-y9hhnm-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-13esu4b-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-y9hhnm-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-193a0td-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-190url3-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-qpwq2o-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-14cf7a0-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="css-prp4qr-Filter"
          >
            <button
              className="css-11t4jg9-Filter"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-ohjhgn-Filter"
              >
                <span
                  className="css-12o2hfl-Filter"
                >
                  <span
                    className="css-1afohzx-Filter"
                  >
                    Label
                    :
                    <span>
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="css-1gnbc76-Icon"
                  onClick={[Function]}
                >
                  <span
                    className="css-1rnhl34-Icon"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
